WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177821
AX: [ATK] aria-rowindex set on row element is not being exposed
https://bugs.webkit.org/show_bug.cgi?id=177821
Summary
AX: [ATK] aria-rowindex set on row element is not being exposed
Joanmarie Diggs
Reported
2017-10-03 09:46:27 PDT
Given: <div role="table"> <div id="test" role="row" aria-rowindex="4"> <div role="cell">test cell</div> </div> </div> The element with id of "test" should expose the value of aria-rowindex as an object attribute on that element. We do this already when the value is set on the cell, but aren't handling the row exposure.
Attachments
Patch
(4.75 KB, patch)
2017-10-03 09:54 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-03 09:46:48 PDT
<
rdar://problem/34791796
>
Joanmarie Diggs
Comment 2
2017-10-03 09:54:59 PDT
Created
attachment 322537
[details]
Patch
WebKit Commit Bot
Comment 3
2017-10-03 17:03:16 PDT
Comment on
attachment 322537
[details]
Patch Clearing flags on attachment: 322537 Committed
r222821
: <
http://trac.webkit.org/changeset/222821
>
WebKit Commit Bot
Comment 4
2017-10-03 17:03:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug