AX: [ATK] aria-rowindex set on row element is not being exposed https://bugs.webkit.org/show_bug.cgi?id=177821

Reviewed by Chris Fleizach.

Source/WebCore:

Expose the value of aria-rowindex when set on a row as an object
attribute, as we already do when it's set on a cell.

Test: accessibility/gtk/aria-rowindex-on-row.html

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(webkitAccessibleGetAttributes):

LayoutTests:

* accessibility/gtk/aria-rowindex-on-row-expected.txt: Added.
* accessibility/gtk/aria-rowindex-on-row.html: Added.


Canonical link: https://commits.webkit.org/194100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222821 268f45cc-cd09-0410-ab3c-d52691b4dbfc